--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -135,7 +135,7 @@ a:visited {
   width: 80%;
   padding-top: 2rem;
   padding-bottom: 1.5rem;
-  transform: scale(1.5); }
+  transform: scale(2); }
 
 .nav__menu {
   top: 100%;
@@ -271,13 +271,16 @@ a:visited {
   .business__phone .business__call {
     font-size: 0.75rem; }
   .business__phone .business__number--desktop {
+    font-size: 1.5rem;
     font-weight: 700; }
   .business__phone img, .business__phone span {
     margin-right: 15px; }
 
 .business__talk {
-  margin-bottom: 1.5rem !important;
-  font-style: 400; }
+  font-size: 0.9rem;
+  font-weight: 200;
+  font-style: italic;
+  margin-bottom: 1.5rem !important; }
 
 .business__contact {
   display: flex;
@@ -329,24 +332,26 @@ a:visited {
 .footer__container {
   color: #ffffff;
   text-align: center; }
-  .footer__container .footer--top {
-    background-color: #1f59b1;
-    padding-top: 1.5rem; }
-    .footer__container .footer--top .footer__logo {
-      max-width: 60%;
-      margin: auto; }
-  .footer__container .footer--bottom {
-    background-color: #2e71d4;
-    font-size: 0.75rem;
-    padding-top: 1.25rem;
-    padding-bottom: 1rem; }
-    .footer__container .footer--bottom p {
-      font-weight: 200; }
-    .footer__container .footer--bottom .footer__text {
-      border-bottom: 1px solid #ffffff;
-      max-width: 90%;
-      margin: 0 auto 7px auto;
-      padding-bottom: 7px; }
+
+.footer--top {
+  background-color: #1f59b1;
+  padding-top: 2rem;
+  padding-bottom: rem; }
+  .footer--top .footer__logo {
+    width: 13rem; }
+
+.footer--bottom {
+  background-color: #2e71d4;
+  font-size: 0.75rem;
+  padding-top: 1.25rem;
+  padding-bottom: 1rem; }
+  .footer--bottom p {
+    font-weight: 200; }
+  .footer--bottom .footer__text {
+    border-bottom: 1px solid #ffffff;
+    max-width: 90%;
+    margin: 0 auto 7px auto;
+    padding-bottom: 7px; }
 
 .footer__social {
   display: flex;
@@ -356,7 +361,13 @@ a:visited {
   max-width: 80%;
   height: 3rem;
   margin: 0 auto; }
-  .footer__social img {
+  .footer__social .footer__icons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    width: 6rem; }
+  .footer__social .footer__img {
     width: auto;
     height: 1.5rem; }
 
@@ -404,8 +415,9 @@ a:visited {
   cursor: pointer; }
 
 .modal__form {
-  padding: 1rem;
-  font-size: 0.9rem; }
+  font-size: 0.9rem;
+  font-weight: 400;
+  padding: 1rem; }
   .modal__form label {
     display: block;
     margin-bottom: 8px;
@@ -415,33 +427,38 @@ a:visited {
     padding-top: 1rem;
     padding-bottom: 1rem; }
   .modal__form input {
+    font-size: 1rem;
+    font-weight: 400;
     height: 2.75rem;
     margin-bottom: 1rem;
     background-color: #ffffff;
     display: inline;
     width: 100%;
-    border: 1px solid #a5a7a8;
-    font-size: 1rem; }
+    border: 1px solid #a5a7a8; }
   .modal__form textarea {
+    font-size: 1rem;
+    font-weight: 400;
     height: 3.25rem;
     margin-bottom: 1rem;
     background-color: #ffffff;
     display: inline;
     width: 100%;
-    border: 1px solid #a5a7a8;
-    font-size: 1rem; }
+    border: 1px solid #a5a7a8; }
 
 .modal__title {
+  font-size: 1.25rem;
+  font-weight: 400;
   background-color: #1f59b1;
   color: #ffffff;
-  font-size: 1.25rem;
   padding: 1.30rem; }
   .modal__title p {
-    font-size: 0.9rem; }
+    font-size: 0.9rem;
+    font-weight: 400; }
 
 label.light {
-  display: inline;
-  font-size: 0.75rem; }
+  font-size: 0.75rem;
+  font-weight: 400;
+  display: inline; }
 
 .modal__question input {
   width: 5% !important;
@@ -457,6 +474,8 @@ label.light {
   align-items: stretch;
   flex-direction: row; }
   .modal__button .modal__submit {
+    font-size: 1.25rem;
+    font-weight: 400;
     border: none;
     color: #29d4c6;
     font-size: 1.25rem;
@@ -654,30 +673,28 @@ label.light {
 
   .footer--top {
     background-color: #1f59b1;
-    padding-top: 1.5rem; }
+    padding-top: 2rem;
+    padding-bottom: 0.75rem; }
 
   .footer--bottom {
     background-color: #2e71d4;
     font-size: 0.75rem;
     padding-top: 1.25rem;
-    padding-bottom: 0.5rem; }
-
-  .footer__logo {
-    width: 15%; }
+    padding-bottom: 1.25rem; }
 
   .footer__social {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
-    max-width: 90%;
-    height: 3rem;
-    margin: 0 auto; }
-    .footer__social img {
+    flex-direction: row; }
+    .footer__social .footer__icons {
+      width: 7rem;
+      margin-left: 1rem; }
+    .footer__social .footer__img {
       max-height: 50%;
       margin-right: 10px; }
-    .footer__social span {
-      font-weight: 200;
+    .footer__social .footer__connect {
+      font-weight: 400;
       margin-right: 1rem; }
 
   .footer__text {
