--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -133,29 +133,40 @@
   .filters__head {
     @include flex(space-between, center, row);
     margin: 0 auto;
-    span {
-      padding: 1rem;
-    }
     .filters__result {
       color: $color-primary;
       font-weight: $font-extraBold;
       margin-right: 0rem;
+      padding: 1rem;
     }
   }
 }
 
+.filters__title {
+  border: 0.5px solid black;
+  padding: 1rem;
+}
+
+.filters__arrow {
+  border-top: 0.5px solid black;
+  border-right: 0.5px solid black;
+  border-bottom: 0.5px solid black;
+  padding: 1rem;
+}
+
 .filters__mobile {
   @include flex(flex-start, stretch, row);
+  color: black;
   margin-right: 1rem;
-  width: 9rem;
-  background-color: $color-light;
   padding: 1rem;
-  box-shadow: 0 0 2px 1px rgb(180, 178, 178);
+  &:visited {
+    color: black;
+  }
 }
 
 .filters__form {
   background-color: $color-light;
-  max-width: 90%;
+  max-width: 85%;
   margin: 1rem auto 0rem auto;
   padding: 2rem 1rem 1rem 1rem;
   display: none;
