background-color update

--- a/resources/css/partials/_media.scss
+++ b/resources/css/partials/_media.scss
@@ -177,8 +177,9 @@
     display: none;
   }
 
-  .filters__desktop {
+  .filters__title--desktop {
     display: inline;
+    margin-left: 1rem;
   }
 
   .filters__form form {
