--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -143,6 +143,7 @@
 }
 
 .filters__title {
+  background-color: $color-light;
   border: 0.5px solid black;
   padding: 1rem;
 }
@@ -336,7 +337,7 @@
   display: none;
 }
 
-.filters__desktop {
+.filters__title--desktop {
   display: none;
 }
 
