--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -64,8 +64,8 @@
   top: 100%;
   transition-property: all;
   transition-duration: 0.75s;
+  transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
   overflow: hidden;
-	transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
   position: absolute;
   z-index: 1;
   background-color: $color-light;
@@ -165,18 +165,28 @@
 }
 
 .filters__form {
+  height: 0px;
+  overflow: hidden;
+  transition-property: all;
+  transition-duration: 0.75s;
+  transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
   background-color: $color-light;
   max-width: 85%;
-  margin: 1rem auto 0rem auto;
-  padding: 2rem 1rem 1rem 1rem;
-  display: none;
-  box-shadow: 0 0 2px 1px rgb(180, 178, 178);
+  margin: 0 auto;
+  //padding: 2rem 1rem 1rem 1rem;
   .filters__input {
     margin-bottom: 1.5rem;
   }
   .filters__label {
     padding-left: 7px;
   }
+}
+
+.filters__form--open {
+  height: 150px !important;
+  //margin: 0 auto;
+  padding: 1.5rem;
+  box-shadow: 0 0 2px 1px rgb(180, 178, 178);
 }
 
 /* Business Section ---------- */
