--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -563,7 +563,7 @@ a:visited {
     border-bottom-right-radius: 10px; }
 
   /* Navigation and Header Desktop Styles ----- */
-  .banner__img {
+  .banner .banner__img {
     padding-top: 0.1rem;
     transform: scale(1);
     width: 100%;
@@ -644,8 +644,6 @@ a:visited {
     align-items: center;
     flex-direction: row;
     background-color: #f0eeee;
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
     max-width: 960px;
     margin: 0 auto;
     border: none;
